--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-	<title>Bingo</title>
+	<title>Einhorn Bullshit Bingo</title>
 	
 	<meta name="viewport" content="user-scalable=no, width=device-width">
 
