--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>Einhorn Bullshit Bingo</title>
 	
-	<meta name="viewport" content="user-scalable=no, width=device-width">
+	<meta name="viewport" content="user-scalable=yes, width=device-width">
 
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 
