--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 	<title>Einhorn Bullshit Bingo</title>
 	
-	<meta name="viewport" content="user-scalable=yes, width=device-width">
-
+	<!--<meta name="viewport" content="user-scalable=yes, width=device-width">
+	-->
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 
 	<script src="js/jquery.js" type="text/javascript"></script>
