--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
 	<title>Einhorn Bullshit Bingo</title>
-	
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<!--<meta name="viewport" content="user-scalable=yes, width=device-width">
 	-->
 	<link href="css/style.css" rel="stylesheet" type="text/css">
