--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <head>
 
-	<title>Einhorn Bullshit Bingo</title>
+  <title>Einhorn Bullshit Bingo</title>
+  <meta charset="utf-8" /> 
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<!--<meta name="viewport" content="user-scalable=yes, width=device-width">
 	-->
